# musicboi

./: README.md  pyproject.toml
src/musicboi/: controlswidget.py  main.py  playerwidget.py  playlistwidget.py  style.css  youtube.py  youtubeworker.py
